Fix spacings

--- a/assets/css/sass/_about.sass
+++ b/assets/css/sass/_about.sass
@@ -27,7 +27,8 @@ h2, h3
         width: 150px
         @include rounded-corners(75px)
         margin-right: $space*2
-
+    h3 
+        margin-top: 0
     p
         @include clear-spacing
         margin-bottom: $space
