--- a/assets/css/sass/_map.sass
+++ b/assets/css/sass/_map.sass
@@ -117,9 +117,7 @@
     @include display-flex
     @include flex-direction(column)
     position: relative
-    padding: $space
-    padding-left: $space
-    padding-right: $space*2
+    padding: $space * 2
     height: 100%
     @media (max-width : #{$sm-width})
         padding-right: $space
